--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -942,7 +942,7 @@ mask-clip: border-box;
 }
 
 .h4.timeline-item-title a,h4{
-  display: block;
+  display: inline-block;
   text-decoration: none;
 }
 .h4.timeline-item-title a{
