--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,7 +578,11 @@ mask-clip: border-box;
 .navbar-link:hover,
 .navbar-link:focus { color: var(--light-gray-70); }
 
-.navbar-link.active { color: var(--orange-yellow-crayola); }
+.navbar-link.active { 
+color: var(--orange-yellow-crayola);
+text-shadow:0px 4px 10px azure;
+transform: scale(1.1);
+}
 
 
 
