--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
+@font-face {
+  font-family: "Vivaldi";
+  font-weight: 400;
+  src: url('VIVALDII.woff') format('woff') ;
+  }
 
 :root {
 
@@ -650,7 +655,9 @@ transform: scale(1.1);
 }
 #grey {
   color: rgb(85, 89, 105);
+  font-family: Vivaldi, serif;
   font-weight: 400;
+  letter-spacing: 5px;	
 }
 #element{
   color:var(--light-gray);
@@ -1469,7 +1476,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 	 font-size: 2.5rem;
  }
  #grey{
-	 font-size: 2.5rem;
+	 font-size: 4.5rem;
  }
 	
  #left{
@@ -2164,7 +2171,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 	 font-size: 1rem;
  }
  #grey{
-	 font-size: 1rem;
+	 font-size: 2.6rem;
  }
 	
  #left{
