--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1087,10 +1087,114 @@ transform: scale(1.1);
 }
 
 .skill-progress-fill {
-  background: var(--text-gradient-yellow);
-  height: 100%;
+  background: rgb(25, 25, 27);
+  height: 110%;
+  overflow: hidden;
   border-radius: inherit;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+.skill-progress-fill div{
+  background: linear-gradient(to right,rgb(255, 111, 0),hsl(45, 100%, 71%),hsl(45, 100%, 71%),hsl(45, 100%, 71%),rgba(170, 207, 5, 0.674));
+  float:left;
+  height: 110%;
+
+}
+
+.front{
+  width:90%;
+  animation: front 3s;
+}
+@keyframes front{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 90%;
+
+}
+}
+.back{
+  width:70%;
+  animation: back 3s;
+}
+@keyframes back{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 70%;
+
+}
+}
+.web{
+  width:80%;
+  animation: web 3s;
+}
+  @keyframes web{
+    0%{
+      width: 0%;
+    }
+    100%{
+      width: 80%;
+  
+  }
+  }
+  
+.graph{
+  width:70%;
+  animation: graph 3s;
+}
+@keyframes graph{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 70%;
+
+}
+}
+
+.brand{
+  width:90%;
+  animation: brand 3s;
+}
+@keyframes brand{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 80%;
+
+}
+}
+
+.word{
+  width:50%;
+  animation: word 3s;
+}
+
+@keyframes word{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 50%;
+
+}
+}
+.dev{
+  width:60%;
+  animation: dev 3s;
+}
+  @keyframes dev{
+    0%{
+      width: 0%;
+    }
+    100%{
+      width: 60%;
+  
+  }
+  }
 
 
 
